--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "vue-router": "^4.3.3"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
     "@rushstack/eslint-patch": "^1.8.0",
     "@tsconfig/node20": "^20.1.4",
     "@types/jsdom": "^21.1.7",
@@ -31,6 +33,7 @@
     "eslint-plugin-vue": "^9.23.0",
     "husky": "^9.1.3",
     "jsdom": "^24.1.0",
+    "lint-staged": "^15.2.7",
     "npm-run-all2": "^6.2.0",
     "typescript": "~5.4.0",
     "vite": "^5.3.1",
