Add testing suite to MainHeader component

--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "preview": "vite preview",
     "test:unit": "vitest",
     "build-only": "vite build",
-    "test": "vitest run --passWithNoTests",
+    "test": "vitest run",
     "test:dev": "vitest --watch",
-    "test:coverage": "vitest run --coverage --passWithNoTests",
+    "test:coverage": "vitest run --coverage",
     "type-check": "vue-tsc --build --force",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "prepare": "husky"
   },
   "dependencies": {
+    "@testing-library/jest-dom": "^6.4.8",
+    "@testing-library/vue": "^8.1.0",
     "@vitest/coverage-v8": "^1.6.0",
     "pinia": "^2.1.7",
     "prettier": "^3.3.3",
